--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />
+  <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
   <title>Smart-Tribune React test</title>
   <style>
     html,
@@ -14,7 +16,7 @@
       height: 100%;
       margin: 0;
       padding: 0;
-      font-family: system-ui, sans-serif;
+      font-family: "Press Start 2P";
     }
   </style>
 </head>
